--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -452,6 +452,8 @@ Label form:
 
 ### 时序电路设计
 
+**Diagram -> Table -> Equations**
+
 **Ex**.
 
 检测1101，注意(110(1)101)
@@ -516,17 +518,23 @@ C --0/0--> D
    
 #### 状态赋值
 
-**方法**
+**规则方法**
 
 * 直接按顺序
-* 用格雷码
+* 用格雷码(较常用)
   * 优点：与K-Map适配
 * 特殊的
-  * 单热点(one-hot)赋值
+  * 单热点(one-hot)赋值（独热码）
+    * 类似于译码器输出
 
 <u>例题见中文版P160开始</u>
 
-#### Unused State的处理
+**选择原则**
+
+* 安全（课程中不重要）
+* 相邻项越多越好，这样消掉的多，电路可简化
+
+**Unused State的处理**
 
 根据具体情况有三种方式，具体操作见习题4-29
 
@@ -534,3 +542,17 @@ C --0/0--> D
 * 
 * 
 
+#### 状态方程
+
+**化简**
+
+* K-Map
+  * 顺序赋值也得化简
+  * 格雷码可以直接移植（PPT slide38）
+* 独热码需要的触发器比较多
+
+#### 状态机设计
+
+跳过设计状态图和状态表的步骤直接写代码，用`case()`语句。
+
+<u>注意：若在时钟上升沿最后赋output，应是下一个状态的output；若是另写一个always赋值output，则因为是实时赋值，所以是当前状态的output</u>
