--- a/Assembly/19-11-27.md
+++ b/Assembly/19-11-27.md
@@ -2,3 +2,245 @@
 
 **Q**: <u>若SS, SP可由系统自己弄，那如果没有分配栈堆segment那能有多大的栈空间？</u>
 
+加载入内存后一块作为栈空间
+
+
+
+### 32位
+
+edx右边16位还是dx，dh，dl，左边16位没有名字
+
+
+
+
+
+### xchg
+
+```assembly
+xchg ax,bx
+xchg ax,ds[bx]
+```
+
+
+
+
+
+### mul
+
+dec2v32.asm
+
+dec2v16.asm
+
+```assembly
+comment #
+    y          x
+16位段地址:32位偏移地址
+t是一张表
+t+y->64位的值, 其中的32位表示y这个段的段首地址
+这种寻址模式称为保护模式(protected mode)
+    y          x
+16位段地址:16位偏移地址
+y*10h+x得到物理地址这种寻址模式称为实模式(real
+mode)。dos启动后，它会把cpu切换到实模式，而非
+保护模式; windows / linux启动后，它会把cpu切换到
+保护模式。
+#
+.386
+data segment use16
+s db "2147483647", 0; 7FFF FFFFh
+abc dd 0
+data ends
+code segment use16
+assume cs:code, ds:data
+main:
+   mov ax, data
+   mov ds, ax
+   mov eax, 0; 被乘数
+   mov si, 0; 数组s的下标
+again:
+   cmp s[si], 0; 判断是否到达数组的结束标志
+   je done
+   mov ebx, 10
+   mul ebx; EDX:EAX=乘积, 其中EDX=0
+          ; 或写成imul eax, ebx
+   mov edx, 0
+   mov dl, s[si]; DL='1'
+   sub dl, '0'
+   add eax, edx
+   ;mov dl, s[si]
+   ;sub dl, '0'
+   ;movzx edx, dl
+   ;add eax, edx
+   inc si
+   jmp again
+done:
+   mov abc, eax
+   mov ah, 4Ch
+   int 21h
+code ends
+end main
+```
+
+
+
+
+
+### imul(signed mul)符号乘
+
+
+
+32位以上cpu可以三个操作数(不一定要32位寄存器)
+
+```assembly
+imul ax, bx, 3; ax = bx * 3
+; 最后一位只能是常数，左边只能是寄存器，中间可reg可内存
+; 可能会溢出
+```
+
+
+
+<u>Q: use16 是干什么，为什么32位里offset会报错 illegal oprand size（加了use16也报错）</u>
+
+
+
+
+
+### div
+
+ax / 除数 = al ... ah
+
+若除数很小也有可能溢出
+
+http://10.71.45.100/bhh/val2decy.asm
+
+```assembly
+.386
+data segment use16
+abc dd 7FFFFFFFh
+s db 10 dup(' '), 0Dh, 0Ah, '$'
+data ends
+code segment use16
+assume cs:code, ds:data
+main:
+   mov ax, data
+   mov ds, ax
+   mov di, 0; 数组s的下标
+   mov eax, abc
+   mov cx, 0; 统计push的次数
+again:
+   mov edx, 0; 被除数为EDX:EAX ; 关键一步，防止+'0'时溢出导致死循环
+   mov ebx, 10
+   div ebx; EAX=商, EDX=余数
+   add dl, '0'
+   push dx
+   inc cx; 相当于add cx, 1
+   cmp eax, 0
+   jne again
+pop_again:
+   pop dx
+   mov s[di], dl
+   inc di
+   dec cx; 相当于sub cx, 1
+   jnz pop_again
+
+   mov ah, 9
+   mov dx, offset s
+   int 21h
+   mov ah, 4Ch
+   int 21h
+code ends
+end main
+```
+
+
+
+
+
+==push不能八位==
+
+
+
+### sscanf 与 sprintf
+
+```c
+char s[] = "12345";
+int y;
+sscanf(s, "%x", &y);	// y == 0x12345;
+sscanf(s, "%d", &y);	// y == 12345;
+
+char sout[] = "";
+sprintf(s, "%d", y);	// s[] == "12345"
+```
+
+
+
+### lea
+
+```assembly
+lea dx, abc
+mov dx, offset abc
+
+; 编译后生成结果不同，分别是
+
+lea dx,[1000h]  ; 是个地址
+mov dx,1000h    ; 是个变量
+
+; 下面的速度略快
+```
+
+特殊用途
+
+```assembly
+mov dx, offset ds:[bx+si+3] ; 语法错误
+lea dx, ds:[bx+si+3]        ;
+; 应写成
+mov dx,1+2+3                ; 正确
+mov dx,((1*2+3) shl 2) xor 5; 正确，常数表达式
+```
+
+<u>offset 后跟的一定是在编译时即可求值的</u>
+
+同理，汇编中使用的表达式仅限于常数表达式
+
+```assembly
+lea eax, [eax+eax*4] ; 用lea做乘法，速度快
+; 编译后实际上是不会取地址的，所以括号里可以当操作数用
+```
+
+
+
+### 远指针
+
+> Def: "段地址:偏移地址"
+>
+> 16位系统中的为16+16
+>
+> 32位系统中的为**16+32**
+>
+> 因此48位远指针有专属类型修饰词 fword ptr
+
+近指针：仅偏移地址
+
+#### 地址在内存中的保存
+
+将1234:5678存入1000:0000中
+
+| Adr       | Val  |
+| --------- | ---- |
+| 1000:0000 | 78h  |
+| 1000:0001 | 56h  |
+| 1000:0002 | 34h  |
+| 1000:0003 | 12h  |
+
+取出操作
+
+```assembly
+mov ax, 1000h
+mov ds, ax
+les bx, dword ptr ds:[0000h]  ; es=1234h, bx=5678h
+; OR
+mov di,ds:[bx];
+mov es,ds:[bx+2]
+mov al,es:[dl] ; al = byte ptr
+```
+
