--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -2,28 +2,45 @@
 
 ### Ch34 Geometrical Opticals
 
-#### 反射的符号法则
+<!--#### 反射的符号法则-->
 
-1. 物距：物与入射光在反射面同侧时为正
-2. 像距：像与出射光在反射面同侧时为正
-3. 曲率半径：曲率中心与出射光在反射面同侧时为正
-4. 上正下负
+<!--1. 物距：物与入射光在反射面同侧时为正-->
+<!--2. 像距：像与出射光在反射面同侧时为正-->
+<!--3. 曲率半径：曲率中心与出射光在反射面同侧时为正-->
+<!--4. 上正下负-->
 
-#### 折射的符号规则
+<!--#### 折射的符号规则-->
 
+<!--* 正透镜(聚透镜)焦距为正-->
+<!--* 负透镜(发散透镜)焦距为负-->`
 
+#### Physics上的 Cartesian Sign Convention(Refraction)
 
-#### Physcs上的 Cartesian Sign Convention
+**法则**
 
 1. 主轴作x轴，以光学中心为原点
 2. 入射光线的方向设为x轴正方向
 3. 向上的为y轴正方向
 
-在这种坐标系下的公式有所改变
+**在这种坐标系下的公式有所改变**
 
-* $\frac{n_2}{v} - \frac{n_1}{u} = {\frac{n_2-n_1}{R}}$
-* $m = \frac{h_1}{h_0} = {\frac{n_1v}{n_2u}}$
-* $\frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$
-* $\frac{1}{v} - \frac{1}{u} = {\frac{1}{f}}$
-* 
+* $\displaystyle \frac{n_2}{v} - \frac{n_1}{u} = {\frac{n_2-n_1}{R}}$
+* $\displaystyle m = \frac{h_1}{h_0} = {\frac{n_1v}{n_2u}}$
+* $\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$
+* $\displaystyle \frac{1}{v} + \frac{1}{-u} = {\frac{1}{f}}$
+
+#### 光学器材
+
+* **放大镜**
+  * 近点：25cm
+  * 角放大率$m_\theta = {\frac{25cm}{f}}$
+* **显微镜**
+  * 放大率$M = m \times m_\theta = -(\frac{S}{f_0})(\frac{25cm}{f})$，其中m为物镜的横向放大率，m~θ~为目镜的角放大率
+* **望远镜**
+  * $m_0 = - {\frac{f_0}{f_e}}$，符号表示倒像
+* **照相机**
+
+### Ch36 Wave Optics
+
+
 
