--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -2,19 +2,27 @@
 
 ### Ch34 Geometrical Opticals
 
-<!--#### 反射的符号法则-->
+#### 反射
 
-<!--1. 物距：物与入射光在反射面同侧时为正-->
-<!--2. 像距：像与出射光在反射面同侧时为正-->
-<!--3. 曲率半径：曲率中心与出射光在反射面同侧时为正-->
-<!--4. 上正下负-->
+##### 符号法则
 
-<!--#### 折射的符号规则-->
+1. 物距：物与入射光在反射面同侧时为正
+2. 像距：像与出射光在反射面同侧时为正
+3. 曲率半径：曲率中心与出射光在反射面同侧时为正
+4. 上正下负
+
+**公式**
+
+* $\displaystyle \frac{1}{v} + \frac{1}{u} = {\frac{1}{f}}$
+
+#### 折射
+
+<!--##### 符号规则-->
 
 <!--* 正透镜(聚透镜)焦距为正-->
-<!--* 负透镜(发散透镜)焦距为负-->`
+<!--* 负透镜(发散透镜)焦距为负-->
 
-#### Physics上的 Cartesian Sign Convention(Refraction)
+##### Physics上的 Cartesian Sign Convention(**Refraction**)
 
 **法则**
 
@@ -41,6 +49,115 @@
 * **照相机**
 
 ### Ch36 Wave Optics
+
+#### Interference 干涉
+
+##### 干涉条件
+
+1. 同频率
+2. 振动方向相同(对于横波是y轴)
+3. 相位差恒定
+
+##### 介质中光性质的变化
+
+$\displaystyle\begin{cases} \lambda_n = \frac \lambda n \\ \varphi = \frac{2\pi r}{\lambda_n} = \frac{2\pi nr}{\lambda}，更多用于相位差 \\ L = nr \end{cases}$
+
+**干涉**
+
+* 加强：$\delta = \pm k \lambda$
+* 减弱：$\delta = \pm (2k-1) \frac \lambda 2$
+* 综合：$\delta = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$
+
+##### 双缝干涉
+
+* **极大**
+  * $\delta = d\sin\theta = \pm k \lambda$
+  * $x = \pm \frac D d k\lambda$
+  * k = 0, 1, 2, ...
+* **极小**
+  * $\delta = d\sin\theta = \pm (2k-1) \frac \lambda 2$
+  * $x = \pm \frac D d (2k-1)\frac \lambda 2$
+  * k = 1, 2, 3, ...
+
+**干涉条纹的强度分布**
+
+设两个光振动矢量分别为：(极坐标上)
+
+* $E_1 = E_{10}\cos(\omega t + \varphi_1)$
+* $E_2 = E_{20}\cos(\omega t + \varphi_2)$
+
+合矢量为$E = E_{0}cos(\omega t + \varphi)$，则有：
+
+* $E_0 = \sqrt{E_{10}^2 + E_{20}^2 + 2E_{10}E_{20}\cos(\varphi_2-\varphi_1)}$（好推的）
+* $\displaystyle \varphi = arctan(\frac{E_{10}\sin\varphi_1 + E_{20}\sin\varphi_2}{E_{10}\cos\varphi_1 + E_{20}\cos\varphi_2})$（好推的，直接拆开即可）
+
+**光强**
+
+$I = 4I_0\cos(\frac{\Delta\varphi}{2})$
+
+
+
+#### 薄膜干涉
+
+**半波损失**
+
+从光疏介质打到光密介质的光在反射时会损失半波
+
+##### **光程**
+
+>  光在介质中传播了几何路程r相当于在真空中传播了光程L
+>
+>  因此L = ct = nvt = nr
+>
+>  **注意**：<u>两波的相位差取决于光程差而非几何路程差</u>
+>
+>  ​	Proof: $\Delta\varphi = 2\pi(\frac{n_1r_1}{\lambda} - \frac{n_2r_2}{\lambda}) = \frac{2\pi}\lambda \Delta L$
+>
+>  另外，透镜会改变光线的传播方向，但并不会引起附加的光程差
+
+##### 等倾干涉
+
+需要考虑半波损失，因此会有个$\frac \lambda 2$
+
+同一束光经过薄膜后的光程差：$\Delta L = \delta = 2n_2\frac{e}{\cos r} - (2n_1 e \tan r \sin i - \frac \lambda 2) \\ = 2n_2e\cos r + \frac\lambda2 \\ = 2e\sqrt{n_2^2 - n_1^2 \sin^2i} + \frac\lambda2$，其中仅**i为变量**
+
+**干涉条件(反射)，i为变量**
+
+$2e\sqrt{n_2^2 - n_1^2 \sin^2i} + \frac\lambda2 = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$
+
+**干涉条件(透射)，i为变量**	
+
+(没有在外表面反射因此没有半波损失)
+
+$2e\sqrt{n_2^2 - n_1^2 \sin^2i} = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$
+
+##### 等厚干涉(劈尖膜)
+
+当用平行单色光垂直照射薄膜时，$i\rightarrow 0$，因此$\delta = 2n_2e + \frac\lambda2 \triangleq 2ne + \frac\lambda2$
+
+**干涉条件，e为变量**
+
+$\delta = 2ne + \frac\lambda2 = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$，此处n是空气层的折射率？
+
+因此相邻两个干涉条纹(同种)的厚度差$\Delta e = \frac{\lambda}{2n} = \Delta L \sin \theta$，因此有$\Delta L = \frac{\lambda}{2n\sin \theta}$
+
+##### 牛顿环
+
+设透镜曲率半径为R，空气层厚度为e，干涉条纹半径为r，光波波长为λ
+
+则有$r = \sqrt{R^2-(R-e)^2} = \sqrt{2Re-e^2} \approx \sqrt{2Re}$，因此将$e = \frac{r^2}{2R}$代入上式，且取n=1可获得
+
+$r = \left \{ \begin{array}{cc} \sqrt{(k-\frac12)R\lambda},(k = 1,2,3,...) & \Longrightarrow 明环 \\ \sqrt{k\lambda},(k=0,1,2,...) & \Longrightarrow 暗环 \end{array}\right.$
+
+##### 迈克尔孙干涉
+
+
+
+
+
+
+
+
 
 
 
