--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -556,3 +556,9 @@ C --0/0--> D
 跳过设计状态图和状态表的步骤直接写代码，用`case()`语句。
 
 <u>注意：若在时钟上升沿最后赋output，应是下一个状态的output；若是另写一个always赋值output，则因为是实时赋值，所以是当前状态的output</u>
+
+#### Appendix
+
+* **t~s~与t~h~**
+  * 建立(Setup)时间(t~s~)：时钟沿到来前输入数据D必须要稳定的时间
+  * 保持(Hold)时间(t~h~)：时钟沿到来后输入数据D必须要稳定的时间
