--- a/GP/普物2笔记.md
+++ b/GP/普物2笔记.md
@@ -68,7 +68,7 @@ $\displaystyle\begin{cases} \lambda_n = \frac \lambda n \\ \varphi = \frac{2\pi 
 * 减弱：$\delta = \pm (2k-1) \frac \lambda 2$
 * 综合：$\delta = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$
 
-##### 双缝干涉
+##### 双缝干涉(分波阵面法)
 
 * **极大**
   * $\delta = d\sin\theta = \pm k \lambda$
@@ -97,11 +97,11 @@ $I = 4I_0\cos(\frac{\Delta\varphi}{2})$
 
 
 
-#### 薄膜干涉
+#### 薄膜干涉(分振幅法)
 
 **半波损失**
 
-从光疏介质打到光密介质的光在反射时会损失半波
+从==光疏介质打到光密介质==的光在反射时会损失半波
 
 ##### **光程**
 
@@ -115,7 +115,7 @@ $I = 4I_0\cos(\frac{\Delta\varphi}{2})$
 >
 >  另外，透镜会改变光线的传播方向，但并不会引起附加的光程差
 
-##### 等倾干涉
+##### 等倾(倾角i相同同种纹)干涉
 
 需要考虑半波损失，因此会有个$\frac \lambda 2$
 
@@ -131,7 +131,9 @@ $2e\sqrt{n_2^2 - n_1^2 \sin^2i} + \frac\lambda2 = \left \{ \begin{array}{cc} k\l
 
 $2e\sqrt{n_2^2 - n_1^2 \sin^2i} = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$
 
-##### 等厚干涉(劈尖膜)
+上面两个明暗纹是互补的
+
+##### 等厚(厚度相同同种纹)干涉(劈尖膜)
 
 当用平行单色光垂直照射薄膜时，$i\rightarrow 0$，因此$\delta = 2n_2e + \frac\lambda2 \triangleq 2ne + \frac\lambda2$
 
