--- a/概统笔记.md
+++ b/概统笔记.md
@@ -754,6 +754,10 @@ $a = \frac{1}{2\sigma^2},  b = \frac{1}{6\sigma^2}, k = 2$
 
 #### 性质
 
+**期望与方差**
+
+显然期望为0，
+
 **密度函数是偶函数**
 
 **当n足够大，t分布近似与标准正态分布（密度函数）**
@@ -787,4 +791,16 @@ $a = \frac{1}{2\sigma^2},  b = \frac{1}{6\sigma^2}, k = 2$
 
 定理3. $\frac{\overline{X} - \mu}{S/\sqrt{n}} \sim t(n-1)$
 
-定理4. $\frac{S_1^2/\sigma_1^2}{S_2^2/\sigma_2^2} \sim \it F (n_1-1,n_2-1)$
+定理4. 
+
+1. $\displaystyle \frac{S_1^2/\sigma_1^2}{S_2^2/\sigma_2^2} \sim \it F (n_1-1,n_2-1)$
+2. $\displaystyle \frac{(\overline{X}-\overline{Y})-(\mu_1-\mu_2)}{\sqrt{\frac{\sigma_1^2}{n_1}+\frac{\sigma_2^2}{n_2}}} \sim N(0,1)$
+3. 当$\displaystyle \sigma_1^2 = \sigma_2^2 \triangleq \sigma^2$，有$\displaystyle \frac{(\overline{X}-\overline{Y})-(\mu_1-\mu_2)}{S_w\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}} \sim t(n_1+n_2-2)$，其中$\displaystyle S_w = {\frac{(n_1-1)S_1^2 + (n_2-1)S_2^2}{n_1+n_2-2}}$
+
+思考题
+
+对于 $\displaystyle \frac{(\overline{X}-\overline{Y})}{\sigma\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}}$，σ^2^是否能用
+
+1. S~1~^2^代替？
+2. 1/2(S~1~^2^+S~2~^2^)代替？
+3. 另有(Z~1~, Z~2~, ..., Z~n3~)，来自N(μ~3~, σ^2^)，$\overline Z$, S~3~^2^分别为其均值方差，则σ^2^可用(S~*~)代替
