--- a/Assembly/19-11-27.md
+++ b/Assembly/19-11-27.md
@@ -215,7 +215,7 @@ lea eax, [eax+eax*4] ; 用lea做乘法，速度快
 >
 > 16位系统中的为16+16
 >
-> 32位系统中的为**16+32**
+> ==32位系统中的为**16+32**==
 >
 > 因此48位远指针有专属类型修饰词 fword ptr
 
