--- a/Assembly/_汇编总结.md
+++ b/Assembly/_汇编总结.md
@@ -110,3 +110,16 @@ ah = 2h：输出DL中单个字符
 ---
 
 call 会把ip压栈，所以子程序的栈操作要小心
+
+---
+
+小端规则
+
+```
+video_addr dw 0000h, 0B800h, 160, 0B800h
+;上述定义也可以写成:
+;video_addr dd 0B8000000h, 0B80000A0h
+```
+
+---
+
